# Claude-Code-To-API

./: .env.example  .gitignore  README.md  README_EN.md  api_keys.json.example  pyproject.toml  requirements-prod.txt  requirements.txt
src/: __init__.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  api_key_auth.py  cors.py  request_logging.py  validation.py
src/api/routes/: __init__.py  api_key_stats.py  chat.py  health.py
src/cli/: __init__.py  server.py
src/models/: __init__.py  api_key.py  message.py  response.py  session.py
src/services/: __init__.py  api_key_service.py  claude_content_parser.py  claude_service.py  database.py  session_manager.py  stream_service.py
src/utils/: __init__.py  config.py  exceptions.py  logging_config.py  port_manager.py
